--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<canvas class="panel" data-processing-sources="sketch.pde"></canvas>
 		</div>
 	    	<div class="footer">
-			Morgan
+			Morgan, AP CSA
 	    	</div>
 	</body>
 </html>
